--- a/www.nass.gov.ng/3ecb3a99fb79f7500a8fbce71bfbd3b55a525c96.yml
+++ b/www.nass.gov.ng/3ecb3a99fb79f7500a8fbce71bfbd3b55a525c96.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Mar 2018 07:46:02 GMT
+    - Sun, 25 Mar 2018 00:35:27 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tqX2b5ui9%2CGEzQ8ws4xD92; path=/
+    - PHPSESSID=qOAbbeL8Jxio07%2Cir3Dy51; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Mar 2018 07:46:02 GMT
+recorded_at: Sun, 25 Mar 2018 00:35:27 GMT
