--- a/www.nass.gov.ng/76fa4fedda2c4d9d58ecbe956c92e6b01f09e5d2.yml
+++ b/www.nass.gov.ng/76fa4fedda2c4d9d58ecbe956c92e6b01f09e5d2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Mar 2018 08:12:49 GMT
+    - Sun, 25 Mar 2018 01:03:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=MJfbk0-SgzMWTyQCMqiF92; path=/
+    - PHPSESSID=aXOvD6QMTrvNxM92s1%2CLb3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Mar 2018 08:12:49 GMT
+recorded_at: Sun, 25 Mar 2018 01:03:03 GMT
