--- a/www.nass.gov.ng/a84a3e66b0e40e33140ccd91ff159e8589a0a5f4.yml
+++ b/www.nass.gov.ng/a84a3e66b0e40e33140ccd91ff159e8589a0a5f4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 23 Mar 2018 09:12:37 GMT
+    - Sun, 25 Mar 2018 02:00:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=gfVYLHgEdFT3QMmX0DV%2CU1; path=/
+    - PHPSESSID=Z6aWOju%2C-k2xrurPONJj01; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 23 Mar 2018 09:12:38 GMT
+recorded_at: Sun, 25 Mar 2018 02:00:48 GMT
